// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delegation operation Build operation (Desugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 76))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 79) ((set_type (params (\\"operation.test.ts\\" 79)) \\"unit\\" (\\"operation.test.ts\\" 89)) (set (operations (\\"operation.test.ts\\" 79)) (cons (set_delegate (variant \\"Some\\" (literal (key_hash tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"operation.test.ts\\" 79)) (\\"operation.test.ts\\" 79)) (\\"operation.test.ts\\" 79)) (operations (\\"operation.test.ts\\" 79)) (\\"operation.test.ts\\" 79)) (\\"operation.test.ts\\" 79)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 76))
        )
        "
`;

exports[`Delegation operation Build operation (Desugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CDR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"option\\",
                            \\"args\\": [
                                {
                                    \\"prim\\": \\"key_hash\\"
                                }
                            ]
                        },
                        {
                            \\"prim\\": \\"Some\\",
                            \\"args\\": [
                                {
                                    \\"string\\": \\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\"
                                }
                            ]
                        }
                    ]
                },
                {
                    \\"prim\\": \\"SET_DELEGATE\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Delegation operation Build operation to clear the delegation (Sugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 104))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 106) ((set_type (params (\\"operation.test.ts\\" 106)) \\"unit\\" (\\"operation.test.ts\\" 107)) (set (operations (\\"operation.test.ts\\" 106)) (cons (set_delegate (variant \\"None\\" (unit) (\\"operation.test.ts\\" 106)) (\\"operation.test.ts\\" 106)) (operations (\\"operation.test.ts\\" 106)) (\\"operation.test.ts\\" 106)) (\\"operation.test.ts\\" 106)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 104))
        )
        "
`;

exports[`Delegation operation Build operation to clear the delegation (Sugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CDR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"NONE\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"key_hash\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"SET_DELEGATE\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Delegation operation Build operation to set delegator (Sugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 95))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 97) ((set_type (params (\\"operation.test.ts\\" 97)) \\"key_hash\\" (\\"operation.test.ts\\" 98)) (set (operations (\\"operation.test.ts\\" 97)) (cons (set_delegate (variant \\"Some\\" (params (\\"operation.test.ts\\" 97)) (\\"operation.test.ts\\" 97)) (\\"operation.test.ts\\" 97)) (operations (\\"operation.test.ts\\" 97)) (\\"operation.test.ts\\" 97)) (\\"operation.test.ts\\" 97)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 95))
        )
        "
`;

exports[`Delegation operation Build operation to set delegator (Sugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"key_hash\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"SET_DELEGATE\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Origination operation Build operation (Desugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 116))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 119) ((set_type (params (\\"operation.test.ts\\" 119)) \\"unit\\" (\\"operation.test.ts\\" 126)) (set (operations (\\"operation.test.ts\\" 119)) (cons (attr (create_contract (contract 
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 119))
            storage (unit)
            storage_type (())
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 119))
        )
        ) (storage (unit)) (baker (variant \\"None\\" (unit) (\\"operation.test.ts\\" 119))) (amount (literal (mutez 0) (\\"operation.test.ts\\" 119))) (\\"operation.test.ts\\" 119)) \\"operation\\" (\\"expression.ts\\" 29)) (operations (\\"operation.test.ts\\" 119)) (\\"operation.test.ts\\" 119)) (\\"operation.test.ts\\" 119)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 116))
        )
        "
`;

exports[`Origination operation Build operation (Desugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DUP\\"
                },
                {
                    \\"prim\\": \\"UNIT\\"
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"mutez\\"
                        },
                        {
                            \\"int\\": \\"0\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"NONE\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"key_hash\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"CREATE_CONTRACT\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"parameter\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"unit\\"
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"storage\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"unit\\"
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"code\\",
                                \\"args\\": [
                                    [
                                        {
                                            \\"prim\\": \\"CDR\\"
                                        },
                                        {
                                            \\"prim\\": \\"NIL\\",
                                            \\"args\\": [
                                                {
                                                    \\"prim\\": \\"operation\\"
                                                }
                                            ]
                                        },
                                        {
                                            \\"prim\\": \\"PAIR\\"
                                        }
                                    ]
                                ]
                            }
                        ]
                    ]
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"2\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"2\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Origination operation Build operation (Sugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 132))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 135) ((set_type (params (\\"operation.test.ts\\" 135)) \\"unit\\" (\\"operation.test.ts\\" 144)) (set (operations (\\"operation.test.ts\\" 135)) (cons (attr (create_contract (contract 
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 135))
            storage (unit)
            storage_type (())
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 135))
        )
        ) (storage (params (\\"operation.test.ts\\" 135))) (baker (variant \\"Some\\" (literal (key_hash tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"operation.test.ts\\" 135)) (\\"operation.test.ts\\" 135))) (amount (literal (mutez 100) (\\"operation.test.ts\\" 135))) (\\"operation.test.ts\\" 135)) \\"operation\\" (\\"expression.ts\\" 29)) (operations (\\"operation.test.ts\\" 135)) (\\"operation.test.ts\\" 135)) (\\"operation.test.ts\\" 135)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 132))
        )
        "
`;

exports[`Origination operation Build operation (Sugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DUP\\"
                },
                {
                    \\"prim\\": \\"DUP\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"3\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"mutez\\"
                        },
                        {
                            \\"int\\": \\"100\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"option\\",
                            \\"args\\": [
                                {
                                    \\"prim\\": \\"key_hash\\"
                                }
                            ]
                        },
                        {
                            \\"prim\\": \\"Some\\",
                            \\"args\\": [
                                {
                                    \\"string\\": \\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\"
                                }
                            ]
                        }
                    ]
                },
                {
                    \\"prim\\": \\"CREATE_CONTRACT\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"parameter\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"unit\\"
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"storage\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"unit\\"
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"code\\",
                                \\"args\\": [
                                    [
                                        {
                                            \\"prim\\": \\"CDR\\"
                                        },
                                        {
                                            \\"prim\\": \\"NIL\\",
                                            \\"args\\": [
                                                {
                                                    \\"prim\\": \\"operation\\"
                                                }
                                            ]
                                        },
                                        {
                                            \\"prim\\": \\"PAIR\\"
                                        }
                                    ]
                                ]
                            }
                        ]
                    ]
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"2\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"2\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Transaction operation Build operation (Desugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 22))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 25) ((set_type (params (\\"operation.test.ts\\" 25)) \\"unit\\" (\\"operation.test.ts\\" 35)) (set (operations (\\"operation.test.ts\\" 25)) (cons (transfer (params (\\"operation.test.ts\\" 25)) (literal (mutez 100) (\\"operation.test.ts\\" 25)) (openVariant (contract default \\"unit\\" (literal (address tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"operation.test.ts\\" 25)) (\\"operation.test.ts\\" 25)) \\"Some\\" (variant \\"Some\\" (literal (string \\"CONTRACT_NOT_FOUND\\") (\\"operation.test.ts\\" 25)) (\\"operation.test.ts\\" 25)) (\\"operation.test.ts\\" 25)) (\\"operation.test.ts\\" 25)) (operations (\\"operation.test.ts\\" 25)) (\\"operation.test.ts\\" 25)) (\\"operation.test.ts\\" 25)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 22))
        )
        "
`;

exports[`Transaction operation Build operation (Desugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"address\\"
                        },
                        {
                            \\"string\\": \\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"CONTRACT\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"unit\\"
                        }
                    ],
                    \\"annots\\": [
                        \\"%default\\"
                    ]
                },
                {
                    \\"prim\\": \\"IF_NONE\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"PUSH\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"option\\",
                                        \\"args\\": [
                                            {
                                                \\"prim\\": \\"string\\"
                                            }
                                        ]
                                    },
                                    {
                                        \\"prim\\": \\"Some\\",
                                        \\"args\\": [
                                            {
                                                \\"string\\": \\"CONTRACT_NOT_FOUND\\"
                                            }
                                        ]
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"FAILWITH\\"
                            }
                        ],
                        []
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"mutez\\"
                        },
                        {
                            \\"int\\": \\"100\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"3\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"TRANSFER_TOKENS\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Transaction operation Build operation (Sugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 41))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 44) ((set_type (params (\\"operation.test.ts\\" 44)) \\"unit\\" (\\"operation.test.ts\\" 48)) (set (operations (\\"operation.test.ts\\" 44)) (cons (transfer (unit) (literal (mutez 100) (\\"operation.test.ts\\" 44)) (openVariant (contract default \\"unit\\" (literal (address tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"operation.test.ts\\" 44)) (\\"operation.test.ts\\" 44)) \\"Some\\" (variant \\"Some\\" (literal (string \\"CONTRACT_NOT_FOUND\\") (\\"operation.test.ts\\" 44)) (\\"operation.test.ts\\" 44)) (\\"operation.test.ts\\" 44)) (\\"operation.test.ts\\" 44)) (operations (\\"operation.test.ts\\" 44)) (\\"operation.test.ts\\" 44)) (\\"operation.test.ts\\" 44)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 41))
        )
        "
`;

exports[`Transaction operation Build operation (Sugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CDR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"address\\"
                        },
                        {
                            \\"string\\": \\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"CONTRACT\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"unit\\"
                        }
                    ],
                    \\"annots\\": [
                        \\"%default\\"
                    ]
                },
                {
                    \\"prim\\": \\"IF_NONE\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"PUSH\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"option\\",
                                        \\"args\\": [
                                            {
                                                \\"prim\\": \\"string\\"
                                            }
                                        ]
                                    },
                                    {
                                        \\"prim\\": \\"Some\\",
                                        \\"args\\": [
                                            {
                                                \\"string\\": \\"CONTRACT_NOT_FOUND\\"
                                            }
                                        ]
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"FAILWITH\\"
                            }
                        ],
                        []
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"mutez\\"
                        },
                        {
                            \\"int\\": \\"100\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"UNIT\\"
                },
                {
                    \\"prim\\": \\"TRANSFER_TOKENS\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Transaction operation Build operation to an originated contract 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 54))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 57) ((set_type (params (\\"operation.test.ts\\" 57)) \\"nat\\" (\\"operation.test.ts\\" 67)) (set (operations (\\"operation.test.ts\\" 59)) (cons (transfer (params (\\"operation.test.ts\\" 57)) (literal (mutez 100) (\\"operation.test.ts\\" 59)) (openVariant (contract ep1 \\"nat\\" (literal (address KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT) (\\"operation.test.ts\\" 59)) (\\"operation.test.ts\\" 59)) \\"Some\\" (variant \\"Some\\" (literal (string \\"CONTRACT_NOT_FOUND\\") (\\"operation.test.ts\\" 59)) (\\"operation.test.ts\\" 59)) (\\"operation.test.ts\\" 59)) (\\"operation.test.ts\\" 59)) (operations (\\"operation.test.ts\\" 59)) (\\"operation.test.ts\\" 59)) (\\"operation.test.ts\\" 59)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 54))
        )
        "
`;

exports[`Transaction operation Build operation to an originated contract 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"nat\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"address\\"
                        },
                        {
                            \\"string\\": \\"KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"CONTRACT\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        }
                    ],
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                },
                {
                    \\"prim\\": \\"IF_NONE\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"PUSH\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"option\\",
                                        \\"args\\": [
                                            {
                                                \\"prim\\": \\"string\\"
                                            }
                                        ]
                                    },
                                    {
                                        \\"prim\\": \\"Some\\",
                                        \\"args\\": [
                                            {
                                                \\"string\\": \\"CONTRACT_NOT_FOUND\\"
                                            }
                                        ]
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"FAILWITH\\"
                            }
                        ],
                        []
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"mutez\\"
                        },
                        {
                            \\"int\\": \\"100\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"3\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"TRANSFER_TOKENS\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;
